# My-Life-In-Data

./: .gitignore  README.md  pyproject.toml
education_and_employment/: README.md
education_and_employment/data/: modules.csv  stopwords.txt
education_and_employment/data/module_description/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
education_and_employment/src/: README.md  cred_by_dept.R  ee_history.R  wc_pull.py  wc_pull_helpers.py  wc_visualise_helpers.py  wc_visualise_wordcloud.py
football/: README.md
football/data/: README.md  audit.csv
football/src/: visualization.R
international/data/: countries.csv  living.csv
international/src/: mlid_int.R  visualise_helpers.R
podcast/: README.md
podcast/data/: README.md  audit.csv  auditc.csv  podcast_directory.csv  podcast_directoryc.csv
podcast/notes/: 1.md  16.md  2.md  22.md  23.md  28.md  29.md  3.md  4.md  7.md  README.md
podcast/src/: visualise.R  visualise_treemap.R
sport/data/: audit.csv
sport/src/: blog.R  mlid_sport.R  visualise_helpers.R
